--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,14 +1,13 @@
 ---
 layout: default
 ---
+<h1 class="category-title">{{ page.title }}</h1>
 
-<h1 class="page-heading">{{ page.title }}</h1>
-<ul>
-{% for post in site.posts %}
-  {% if post.categories contains page.taxonomy %}
+<ul class="posts-list">
+  {% for post in site.categories[page.category] %}
     <li>
       <a href="{{ post.url }}">{{ post.title }}</a>
+      <span class="post-date">{{ post.date | date: "%Y-%m-%d" }}</span>
     </li>
-  {% endif %}
-{% endfor %}
+  {% endfor %}
 </ul>
